# h5inspect

./: .gitignore  Cargo.toml  LICENSE  README.md  dummy.h5  dummy_data.h5  h5_python_inspect_example.py
.github/workflows/: rust.yml  update-gif.yml
h5inspect_post/: README.md  h5inspect_post_example.py
src/: analysis.rs  app.rs  events.rs  h5_gen.rs  h5_utils.rs  hist_plot.rs  main.rs  num_utils.rs  tree.rs  ui.rs
vhs/: vhs.tape
