[package]
name = "h5inspect"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.23"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
hdf5-metno = "0.9.3"
hdf5-metno-sys = "0.10.0"
humansize = "=2.1.3"
log = "0.4.22"
ndarray = "0.16.1"
num-format = "0.4.4"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
regex = "1.11.1"
tokio = { version = "1.47.1", features = ["full"] }
tui-logger = "0.14.1"
tui-tree-widget = "0.23.0"
