[package]
name = "h5inspect"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = "4.5.23"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "6.0.0"
dtoa = "1.0.10"
duplicate = "2.0.0"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
hdf5-metno = "0.9.3"
hdf5-metno-sys = "0.10.0"
humansize = "=2.1.3"
log = "0.4.22"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
num-traits = "0.2.19"
plotters = "0.3.7"
plotters-ratatui-backend = "0.3.0"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
tokio = { version = "1.47.1", features = ["full"] }
tui-big-text = "0.7.1"
tui-logger = "0.14.1"
tui-tree-widget = "0.23.0"
