[package]
name = "h5inspect"
edition = "2021"
version = "1.3.1"
description = "A terminal based HDF5 file inspector"
repository = "https://github.com/HalFrgrd/h5inspect"

[features]
default = []
static = ["hdf5-metno/static"]

[dependencies]
chrono = "0.4.42"
clap = "4.5.23"
color-eyre = "0.6.3"
dirs = "6.0.0"
dtoa = "1.0.10"
duplicate = "2.0.0"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
hdf5-metno = { version = "0.10.1", features = ["blosc-all", "complex", "f16", "zlib"] }
hdf5-metno-sys = "0.10.0"
log = "0.4.22"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
num-traits = "0.2.19"
numfmt = "1.2.0"
plotters = {version = "0.3.7", default-features = false, features = ["all_elements", "all_series"]}
plotters-ratatui-backend = "0.3.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-big-text = "0.7.1"
tui-logger = "0.17.4"
tui-tree-widget = "0.23.0"

[dependencies.crossterm]
version = "0.29.0"
features = ["event-stream"]

[dependencies.ratatui]
version = "0.29.0"
features = ["default", "unstable-rendered-line-info"]

[dependencies.tokio]
version = "1.47.1"
features = ["rt-multi-thread", "io-util", "sync", "full", "net", "signal", "rt", "process", "time", "io-std", "parking_lot", "macros"]
default-features = false
